gen/XMLParser.java
// Generated from C:/Users/Lycantropus/Desktop/COMP/proj/src\XMLParser.g4 by ANTLR 4.5
package gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class XMLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, COMMENT=2, TAG_START_OPEN=3, TAG_END_OPEN=4, TAG_CLOSE=5, TAG_EMPTY_CLOSE=6, 
		AIRPORT=7, TAXIWAYPOINT=8, TAXIWAYPARKING=9, TAXINAME=10, TAXIWAYPATH=11, 
		TOWER=12, SERVICES=13, RUNWAY=14, RUNWAYALIAS=15, TAXIWAYSIGN=16, WAYPOINT=17, 
		HELIPAD=18, START=19, JETWAY=20, FUEL=21, MARKINGS=22, LIGHTS=23, OFFSETTHRESHOLD=24, 
		APPROACHLIGHTS=25, VASI=26, ILS=27, GLIDESLOPE=28, DME=29, ROUTE=30, NEXT=31, 
		PREVIOUS=32, SCENERYOBJECT=33, LIBRARYOBJECT=34, STRING=35, SPECIAL_CHAR=36, 
		EQUALS=37, QUOTES=38, OP=39, DISTANCE=40, INT=41, FLOAT=42;
	public static final int
		RULE_document = 0, RULE_xmlItems = 1, RULE_attributeName = 2, RULE_attribute = 3, 
		RULE_attributeValue = 4, RULE_airportElement = 5, RULE_airportElements = 6, 
		RULE_comment = 7, RULE_servicesElement = 8, RULE_servicesElements = 9, 
		RULE_fuelElement = 10, RULE_towerElement = 11, RULE_runwayElement = 12, 
		RULE_runwayElements = 13, RULE_markingsElement = 14, RULE_lightsElement = 15, 
		RULE_offsetThresholdElement = 16, RULE_approachLightsElement = 17, RULE_vasiElement = 18, 
		RULE_ilsElement = 19, RULE_ilsElements = 20, RULE_glideSlopeElement = 21, 
		RULE_dmeElement = 22, RULE_startElement = 23, RULE_runwayAliasElement = 24, 
		RULE_waypointElement = 25, RULE_routeElement = 26, RULE_routeElements = 27, 
		RULE_nextElement = 28, RULE_previousElement = 29, RULE_helipadElement = 30, 
		RULE_jetwayElement = 31, RULE_sceneryObjectElement = 32, RULE_sceneryObjectElements = 33, 
		RULE_libraryObject = 34, RULE_taxiwayPointElement = 35, RULE_taxiwayParkingElement = 36, 
		RULE_taxiNameElement = 37, RULE_taxiwayPathElement = 38, RULE_taxiwaySignElement = 39, 
		RULE_startpoint = 40;
	public static final String[] ruleNames = {
		"document", "xmlItems", "attributeName", "attribute", "attributeValue", 
		"airportElement", "airportElements", "comment", "servicesElement", "servicesElements", 
		"fuelElement", "towerElement", "runwayElement", "runwayElements", "markingsElement", 
		"lightsElement", "offsetThresholdElement", "approachLightsElement", "vasiElement", 
		"ilsElement", "ilsElements", "glideSlopeElement", "dmeElement", "startElement", 
		"runwayAliasElement", "waypointElement", "routeElement", "routeElements", 
		"nextElement", "previousElement", "helipadElement", "jetwayElement", "sceneryObjectElement", 
		"sceneryObjectElements", "libraryObject", "taxiwayPointElement", "taxiwayParkingElement", 
		"taxiNameElement", "taxiwayPathElement", "taxiwaySignElement", "startpoint"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, "'<'", "'</'", "'>'", "'/>'", "'Airport'", "'TaxiwayPoint'", 
		"'TaxiwayParking'", "'TaxiName'", "'TaxiwayPath'", "'Tower'", "'Services'", 
		"'Runway'", "'RunwayAlias'", "'TaxiwaySign'", "'Waypoint'", "'Helipad'", 
		"'Start'", "'Jetway'", "'Fuel'", "'Markings'", "'Lights'", "'OffsetThreshold'", 
		"'ApproachLights'", "'Vasi'", "'Ils'", "'GlideSlope'", "'Dme'", "'Route'", 
		"'Next'", "'Previous'", "'SceneryObject'", "'LibraryObject'", null, null, 
		"'='", "'\"'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "WS", "COMMENT", "TAG_START_OPEN", "TAG_END_OPEN", "TAG_CLOSE", 
		"TAG_EMPTY_CLOSE", "AIRPORT", "TAXIWAYPOINT", "TAXIWAYPARKING", "TAXINAME", 
		"TAXIWAYPATH", "TOWER", "SERVICES", "RUNWAY", "RUNWAYALIAS", "TAXIWAYSIGN", 
		"WAYPOINT", "HELIPAD", "START", "JETWAY", "FUEL", "MARKINGS", "LIGHTS", 
		"OFFSETTHRESHOLD", "APPROACHLIGHTS", "VASI", "ILS", "GLIDESLOPE", "DME", 
		"ROUTE", "NEXT", "PREVIOUS", "SCENERYOBJECT", "LIBRARYOBJECT", "STRING", 
		"SPECIAL_CHAR", "EQUALS", "QUOTES", "OP", "DISTANCE", "INT", "FLOAT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override
	@NotNull
	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "XMLParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public XMLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class DocumentContext extends ParserRuleContext {
		public List<XmlItemsContext> xmlItems() {
			return getRuleContexts(XmlItemsContext.class);
		}
		public XmlItemsContext xmlItems(int i) {
			return getRuleContext(XmlItemsContext.class,i);
		}
		public DocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_document; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XMLParserListener ) ((XMLParserListener)listener).enterDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XMLParserListener ) ((XMLParserListener)listener).exitDocument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XMLParserVisitor ) return ((XMLParserVisitor<? extends T>)visitor).visitDocument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DocumentContext document() throws RecognitionException {
		DocumentContext _localctx = new DocumentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_document);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(82); 
				xmlItems();
				}
				}
				setState(85); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==COMMENT || _la==TAG_START_OPEN );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class XmlItemsContext extends ParserRuleContext {
		public AirportElementContext airportElement() {
			return getRuleContext(AirportElementContext.class,0);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public XmlItemsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_xmlItems; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XMLParserListener ) ((XMLParserListener)listener).enterXmlItems(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XMLParserListener ) ((XMLParserListener)listener).exitXmlItems(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XMLParserVisitor ) return ((XMLParserVisitor<? extends T>)visitor).visitXmlItems(this);
			else return visitor.visitChildren(this);
		}
	}

	public final XmlItemsContext xmlItems() throws RecognitionException {
		XmlItemsContext _localctx = new XmlItemsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_xmlItems);
		try {
			setState(89);
			switch (_input.LA(1)) {
			case TAG_START_OPEN:
				enterOuterAlt(_localctx, 1);
				{
				setState(87); 
				airportElement();
				}
				break;
			case COMMENT:
				enterOuterAlt(_localctx, 2);
				{
				setState(88); 
				comment();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeNameContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(XMLParser.STRING, 0); }
		public AttributeNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attributeName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XMLParserListener ) ((XMLParserListener)listener).enterAttributeName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XMLParserListener ) ((XMLParserListener)listener).exitAttributeName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XMLParserVisitor ) return ((XMLParserVisitor<? extends T>)visitor).visitAttributeName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttributeNameContext attributeName() throws RecognitionException {
		AttributeNameContext _localctx = new AttributeNameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_attributeName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91); 
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeContext extends ParserRuleContext {
		public AttributeNameContext attributeName() {
			return getRuleContext(AttributeNameContext.class,0);
		}
		public TerminalNode EQUALS() { return getToken(XMLParser.EQUALS, 0); }
		public List<TerminalNode> QUOTES() { return getTokens(XMLParser.QUOTES); }
		public TerminalNode QUOTES(int i) {
			return getToken(XMLParser.QUOTES, i);
		}
		public AttributeValueContext attributeValue() {
			return getRuleContext(AttributeValueContext.class,0);
		}
		public AttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attribute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XMLParserListener ) ((XMLParserListener)listener).enterAttribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XMLParserListener ) ((XMLParserListener)listener).exitAttribute(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XMLParserVisitor ) return ((XMLParserVisitor<? extends T>)visitor).visitAttribute(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttributeContext attribute() throws RecognitionException {
		AttributeContext _localctx = new AttributeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_attribute);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93); 
			attributeName();
			setState(94); 
			match(EQUALS);
			setState(95); 
			match(QUOTES);
			setState(96); 
			attributeValue();
			setState(97); 
			match(QUOTES);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeValueContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(XMLParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(XMLParser.FLOAT, 0); }
		public TerminalNode DISTANCE() { return getToken(XMLParser.DISTANCE, 0); }
		public TerminalNode OP() { return getToken(XMLParser.OP, 0); }
		public List<TerminalNode> STRING() { return getTokens(XMLParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(XMLParser.STRING, i);
		}
		public AttributeValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attributeValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XMLParserListener ) ((XMLParserListener)listener).enterAttributeValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XMLParserListener ) ((XMLParserListener)listener).exitAttributeValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XMLParserVisitor ) return ((XMLParserVisitor<? extends T>)visitor).visitAttributeValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttributeValueContext attributeValue() throws RecognitionException {
		AttributeValueContext _localctx = new AttributeValueContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_attributeValue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(100);
				_la = _input.LA(1);
				if (_la==OP) {
					{
					setState(99); 
					match(OP);
					}
				}

				setState(102); 
				match(INT);
				}
				break;
			case 2:
				{
				setState(104);
				_la = _input.LA(1);
				if (_la==OP) {
					{
					setState(103); 
					match(OP);
					}
				}

				setState(106); 
				match(FLOAT);
				}
				break;
			case 3:
				{
				setState(107); 
				match(DISTANCE);
				}
				break;
			case 4:
				{
				setState(109); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(108); 
					match(STRING);
					}
					}
					setState(111); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==STRING );
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AirportElementContext extends ParserRuleContext {
		public TerminalNode TAG_START_OPEN() { return getToken(XMLParser.TAG_START_OPEN, 0); }
		public List<TerminalNode> AIRPORT() { return getTokens(XMLParser.AIRPORT); }
		public TerminalNode AIRPORT(int i) {
			return getToken(XMLParser.AIRPORT, i);
		}
		public List<TerminalNode> TAG_CLOSE() { return getTokens(XMLParser.TAG_CLOSE); }
		public TerminalNode TAG_CLOSE(int i) {
			return getToken(XMLParser.TAG_CLOSE, i);
		}
		public TerminalNode TAG_END_OPEN() { return getToken(XMLParser.TAG_END_OPEN, 0); }
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public List<AirportElementsContext> airportElements() {
			return getRuleContexts(AirportElementsContext.class);
		}
		public AirportElementsContext airportElements(int i) {
			return getRuleContext(AirportElementsContext.class,i);
		}
		public AirportElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_airportElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XMLParserListener ) ((XMLParserListener)listener).enterAirportElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XMLParserListener ) ((XMLParserListener)listener).exitAirportElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XMLParserVisitor ) return ((XMLParserVisitor<? extends T>)visitor).visitAirportElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AirportElementContext airportElement() throws RecognitionException {
		AirportElementContext _localctx = new AirportElementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_airportElement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115); 
			match(TAG_START_OPEN);
			setState(116); 
			match(AIRPORT);
			setState(118); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(117); 
				attribute();
				}
				}
				setState(120); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==STRING );
			setState(122); 
			match(TAG_CLOSE);
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMENT || _la==TAG_START_OPEN) {
				{
				{
				setState(123); 
				airportElements();
				}
				}
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(129); 
			match(TAG_END_OPEN);
			setState(130); 
			match(AIRPORT);
			setState(131); 
			match(TAG_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AirportElementsContext extends ParserRuleContext {
		public ServicesElementContext servicesElement() {
			return getRuleContext(ServicesElementContext.class,0);
		}
		public TowerElementContext towerElement() {
			return getRuleContext(TowerElementContext.class,0);
		}
		public RunwayElementContext runwayElement() {
			return getRuleContext(RunwayElementContext.class,0);
		}
		public StartElementContext startElement() {
			return getRuleContext(StartElementContext.class,0);
		}
		public RunwayAliasElementContext runwayAliasElement() {
			return getRuleContext(RunwayAliasElementContext.class,0);
		}
		public WaypointElementContext waypointElement() {
			return getRuleContext(WaypointElementContext.class,0);
		}
		public HelipadElementContext helipadElement() {
			return getRuleContext(HelipadElementContext.class,0);
		}
		public JetwayElementContext jetwayElement() {
			return getRuleContext(JetwayElementContext.class,0);
		}
		public TaxiwayPointElementContext taxiwayPointElement() {
			return getRuleContext(TaxiwayPointElementContext.class,0);
		}
		public TaxiwayParkingElementContext taxiwayParkingElement() {
			return getRuleContext(TaxiwayParkingElementContext.class,0);
		}
		public TaxiNameElementContext taxiNameElement() {
			return getRuleContext(TaxiNameElementContext.class,0);
		}
		public TaxiwayPathElementContext taxiwayPathElement() {
			return getRuleContext(TaxiwayPathElementContext.class,0);
		}
		public TaxiwaySignElementContext taxiwaySignElement() {
			return getRuleContext(TaxiwaySignElementContext.class,0);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public AirportElementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_airportElements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XMLParserListener ) ((XMLParserListener)listener).enterAirportElements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XMLParserListener ) ((XMLParserListener)listener).exitAirportElements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XMLParserVisitor ) return ((XMLParserVisitor<? extends T>)visitor).visitAirportElements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AirportElementsContext airportElements() throws RecognitionException {
		AirportElementsContext _localctx = new AirportElementsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_airportElements);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(133); 
				servicesElement();
				}
				break;
			case 2:
				{
				setState(134); 
				towerElement();
				}
				break;
			case 3:
				{
				setState(135); 
				runwayElement();
				}
				break;
			case 4:
				{
				setState(136); 
				startElement();
				}
				break;
			case 5:
				{
				setState(137); 
				runwayAliasElement();
				}
				break;
			case 6:
				{
				setState(138); 
				waypointElement();
				}
				break;
			case 7:
				{
				setState(139); 
				helipadElement();
				}
				break;
			case 8:
				{
				setState(140); 
				jetwayElement();
				}
				break;
			case 9:
				{
				setState(141); 
				taxiwayPointElement();
				}
				break;
			case 10:
				{
				setState(142); 
				taxiwayParkingElement();
				}
				break;
			case 11:
				{
				setState(143); 
				taxiNameElement();
				}
				break;
			case 12:
				{
				setState(144); 
				taxiwayPathElement();
				}
				break;
			case 13:
				{
				setState(145); 
				taxiwaySignElement();
				}
				break;
			case 14:
				{
				setState(146); 
				comment();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommentContext extends ParserRuleContext {
		public TerminalNode COMMENT() { return getToken(XMLParser.COMMENT, 0); }
		public CommentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XMLParserListener ) ((XMLParserListener)listener).enterComment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XMLParserListener ) ((XMLParserListener)listener).exitComment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XMLParserVisitor ) return ((XMLParserVisitor<? extends T>)visitor).visitComment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CommentContext comment() throws RecognitionException {
		CommentContext _localctx = new CommentContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_comment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149); 
			match(COMMENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ServicesElementContext extends ParserRuleContext {
		public TerminalNode TAG_START_OPEN() { return getToken(XMLParser.TAG_START_OPEN, 0); }
		public List<TerminalNode> SERVICES() { return getTokens(XMLParser.SERVICES); }
		public TerminalNode SERVICES(int i) {
			return getToken(XMLParser.SERVICES, i);
		}
		public List<TerminalNode> TAG_CLOSE() { return getTokens(XMLParser.TAG_CLOSE); }
		public TerminalNode TAG_CLOSE(int i) {
			return getToken(XMLParser.TAG_CLOSE, i);
		}
		public TerminalNode TAG_END_OPEN() { return getToken(XMLParser.TAG_END_OPEN, 0); }
		public List<ServicesElementsContext> servicesElements() {
			return getRuleContexts(ServicesElementsContext.class);
		}
		public ServicesElementsContext servicesElements(int i) {
			return getRuleContext(ServicesElementsContext.class,i);
		}
		public ServicesElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_servicesElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XMLParserListener ) ((XMLParserListener)listener).enterServicesElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XMLParserListener ) ((XMLParserListener)listener).exitServicesElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XMLParserVisitor ) return ((XMLParserVisitor<? extends T>)visitor).visitServicesElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ServicesElementContext servicesElement() throws RecognitionException {
		ServicesElementContext _localctx = new ServicesElementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_servicesElement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151); 
			match(TAG_START_OPEN);
			setState(152); 
			match(SERVICES);
			setState(153); 
			match(TAG_CLOSE);
			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TAG_START_OPEN) {
				{
				{
				setState(154); 
				servicesElements();
				}
				}
				setState(159);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(160); 
			match(TAG_END_OPEN);
			setState(161); 
			match(SERVICES);
			setState(162); 
			match(TAG_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ServicesElementsContext extends ParserRuleContext {
		public FuelElementContext fuelElement() {
			return getRuleContext(FuelElementContext.class,0);
		}
		public ServicesElementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_servicesElements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XMLParserListener ) ((XMLParserListener)listener).enterServicesElements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XMLParserListener ) ((XMLParserListener)listener).exitServicesElements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XMLParserVisitor ) return ((XMLParserVisitor<? extends T>)visitor).visitServicesElements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ServicesElementsContext servicesElements() throws RecognitionException {
		ServicesElementsContext _localctx = new ServicesElementsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_servicesElements);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164); 
			fuelElement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
